--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: 1.18.0
   firebase_messaging: ^11.4.3
   firebase_in_app_messaging: ^0.6.0+17
+  toast: ^0.2.9
 
 dev_dependencies:
   flutter_test:
