--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.3
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/icon.png"
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+# assets ma icon ma ek png nakhi devani pachhi upr mujab kri devanu pachhi terminal ma jai aa comand run krva no
+  # etle icon set thai jase badhe aap mede flutter pub run icons_launcher:main
+
+
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
@@ -63,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
