--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="pushnotification">
 
-        <meta-data android:name="com.google.firebase.messaging.default_notification_channel_id"
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
             android:resource="@drawable/ic_stat_bike"/>
         <activity
             android:name=".MainActivity"
